--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -25,6 +25,8 @@
         android:layout_weight="1"
         android:layout_width="0dp"
         android:layout_gravity="center"
-        android:layout_height="match_parent" />
+        android:layout_height="80dp"
+        android:src="@drawable/call"
+        android:scaleType="fitCenter"/>
 
 </LinearLayout>
