--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -16,6 +16,8 @@
             android:id="@+id/hospital_name"
             android:layout_width="match_parent"
             android:layout_height="0dp"
+            android:textSize="24dp"
+            android:textStyle="bold"
             android:layout_weight="6"/>
         <TextView
             android:id="@+id/hospital_mobile"
